feat: add init feat snacks.nvim

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,3 +1,4 @@
+# tmux source-file ~/.tmux.conf
 set -g default-terminal "screen-256color"
 
 set -g prefix C-a
@@ -24,7 +25,20 @@ set -g window-status-current-style bg=red,fg=white
 set -g set-clipboard on
 
 setw -g mode-keys vi
+
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'pbcopy'
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'pbcopy'
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'pbcopy'
+
+# Move between panes with vim-style keys
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Resize panes with arrow keys
+bind -r Left resize-pane -L 5
+bind -r Right resize-pane -R 5
+bind -r Up resize-pane -U 5
+bind -r Down resize-pane -D 5
